# antminer-exporter

./: .dockerignore  .env.example  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alerts/grafana-managed/: antminer-alerts.yaml
alerts/prometheus/: antminer.rules.yaml
dashboards/: antminer-s21.json
src/antminer_exporter/: __init__.py  app.py
